# SimpleDNSTunnel

./: .gitignore  LICENSE  Makefile.am  README  Vagrantfile  configure.ac
docs/pl/: Struktura pakietu PseudoDNS.odt
etc/: Makefile.am  sdnst.conf
src/: Makefile.am  PrimitiveReaderAndWriter.cpp  PrimitiveReaderAndWriter.h  main.cpp
src/Interfaces/: Interface.h  InterfaceException.h  Socket.cpp  Socket.h  TunTap.cpp  TunTap.h
src/Options/: BadOptionValueException.h  ProgramOptions.cpp  ProgramOptions.h
src/Packets/: BadPartSizeException.h  CantSetControlTypeException.h  CorruptedPacketException.h  Encapsulator.cpp  Encapsulator.h  Packet.h  PseudoDNS.cpp  PseudoDNS.h  TooMuchDataException.h  WrongMagicNumberException.h
tests/: Encapsulator.cpp  Makefile.am  ProgramOptions_ConfigFile.cpp  PseudoDNS.cpp  example1.conf  main.cpp
